--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="version" href="/version.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
