--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <link rel="icon" href="/favicon.png" />
     <link rel="version" href="/version.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +14,12 @@
       content="Автоматизация размещения положительных отзывов для бизнеса. Сервис INSERM автоматизирует публикацию положительных отзывов и продвигает вас на картах."
     />
     <title>INSERM | Сервис для заказа отзывов</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
